--- a/app/components/Home/Home.module.css
+++ b/app/components/Home/Home.module.css
@@ -1,50 +1,51 @@
-.container {
-    text-align: center;
-    padding: var(--space-5);
-    color: var(--text-primary);
-  }
-  
+@import '../../variables.css';
+
 .container h1 {
     font-size: var(--text-3xl);
     margin-bottom: var(--space-4);
 }
-  
+
 .grid {
-    padding-top: 50px;
+    padding-top: 10px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: var(--space-4);
+    gap: var(--space-3);
     justify-content: center;
+    background: var(--primary);
   }
-  
   .card {
     padding: var(--space-3);
     transition: transform var(--transition-fast);
   }
-  
+
   .card img {
-    width: 210px;
+    width: 220px;
     border-radius: var(--border-radius);
   }
-  
   .card:hover {
     transform: scale(1.05);
   }
 
+  .headerTitle {
+    gap: 5px;
+    margin-top: var(--space-4);
+    display: flex;
+    flex-direction: row;
+  }
+
 @media (max-width: 768px) {
     .grid {
-      grid-template-columns: repeat(auto-fit, minmax(109px, 1fr)); 
+      grid-template-columns: repeat(auto-fit, minmax(109px, 1fr));
       gap: var(--space-0);
     }
-  
+
     .card img {
-      width: 100%; 
+      width: 100%;
     }
 
     .card {
         padding: var(--space-1);
         transition: transform var(--transition-fast);
       }
-      
+
   }
-  
